k8s/microphoto.yml
apiVersion: v1
kind: Service
metadata:
  name: microphoto-service
  namespace: dsbd
spec:
  selector:
    app: microphoto
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      name: pod
    - port: 9000
      targetPort: 9000
      name: exporter

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: microphoto-deploy
  namespace: dsbd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microphoto
  template:
    metadata:
      labels:
        app: microphoto
    spec:
      containers:
        - name: microphoto-container
          image: al3gr/microphoto:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
            - containerPort: 9000
          command: ["flask", "--app", "microPhoto", "run", "--host=0.0.0.0"]
