k8s/microtagger.yml
apiVersion: v1
kind: Service
metadata:
  name: microtagger-service
  namespace: dsbd
spec:
  selector:
    app: microtagger
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      name: pod
    - port: 9000
      targetPort: 9000
      name: exporter

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: microtagger-deploy
  namespace: dsbd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microtagger
  template:
    metadata:
      labels:
        app: microtagger
    spec:
      containers:
        - name: microtagger-container
          image: al3gr/microtagger:1.0
          ports:
            - containerPort: 5000
            - containerPort: 9000
          command: ["python", "-u", "micro_tagger.py"]
