k8s/microuser.yml
apiVersion: v1
kind: Service
metadata:
  name: microuser-service
  namespace: dsbd
spec:
  selector:
    app: microuser
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: microuser-deploy
  namespace: dsbd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microuser
  template:
    metadata:
      labels:
        app: microuser
    spec:
      containers:
        - name: microuser-container
          image: al3gr/microuser
          ports:
            - containerPort: 5000
          command: ["flask", "--app", "microUser", "run", "--host=0.0.0.0"]
