k8s/sladb.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sladb
  namespace: dsbd
spec:
  serviceName: "sladb"
  replicas: 1
  selector:
    matchLabels:
      app: sladb
  template:
    metadata:
      labels:
        app: sladb
    spec:
      containers:
        - name: sladb
          image: al3gr/sladb
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: sladb-data
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: sladb-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 100Mi

---

# mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sladb
  namespace: dsbd
spec:
  selector:
    app: sladb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
