k8s/slamanager.yml
apiVersion: v1
kind: Service
metadata:
  name: sla-service
  namespace: dsbd
spec:
  selector:
    app: slamanager
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: sla-deploy
  namespace: dsbd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: slamanager
  template:
    metadata:
      labels:
        app: slamanager
    spec:
      containers:
        - name: slamanager-container
          image: al3gr/slamanager:1.0
          ports:
            - containerPort: 5000
          command: ["flask", "--app", "slaManager", "run", "--host=0.0.0.0"]
