k8s/userdb.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: userdb
  namespace: dsbd
spec:
  serviceName: "userdb"
  replicas: 1
  selector:
    matchLabels:
      app: userdb
  template:
    metadata:
      labels:
        app: userdb
    spec:
      containers:
        - name: userdb
          image: al3gr/userdb:1.0
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: userdb-data
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: userdb-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 100Mi

---

# mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: userdb
  namespace: dsbd
spec:
  selector:
    app: userdb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
